--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -17,6 +17,7 @@
     "GHSA-mgfv-m47x-4wqp",
     "GHSA-96g7-g7g9-jxw8",
     "GHSA-c76h-2ccp-4975",
-    "GHSA-vg6x-rcgg-rjx6"
+    "GHSA-vg6x-rcgg-rjx6",
+    "GHSA-67mh-4wv8-2f99"
   ]
 }
