--- a/package.json
+++ b/package.json
@@ -290,8 +290,7 @@
     "rollup": "4.22.4",
     "cross-spawn": "6.0.6",
     "nanoid": "3.3.8",
-    "elliptic": "6.6.1",
-    "esbuild": "0.25.0"
+    "elliptic": "6.6.1"
   },
   "lavamoat": {
     "allowScripts": {
