--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "// Build and zip": "",
     "bundle": "yarn build && yarn zip",
     "// Runs tests": "",
-    "anvil": "anvil --fork-url $(./scripts/get-rpc-url.sh mainnet) --fork-block-number 21574102 --block-base-fee-per-gas 1000000000 --block-gas-limit 30000000",
+    "anvil": "anvil --fork-url $(./scripts/get-rpc-url.sh mainnet) --block-base-fee-per-gas 100000000 --block-gas-limit 30000000",
     "anvil:optimism": "anvil --fork-url $(./scripts/get-rpc-url.sh optimism)",
     "anvil:kill": "lsof -i :8545|tail -n +2|awk '{print $2}'|xargs -r kill -s SIGINT",
     "test": "./scripts/unit-tests.sh",
@@ -198,7 +198,7 @@
     "audit-ci": "6.3.0",
     "browserify": "17.0.0",
     "chalk": "5.3.0",
-    "chromedriver": "130",
+    "chromedriver": "133",
     "circular-dependency-plugin": "5.2.2",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
