--- a/package.json
+++ b/package.json
@@ -293,7 +293,8 @@
     "elliptic": "6.6.1",
     "@babel/helpers": "7.26.10",
     "@babel/runtime": "7.26.10",
-    "@babel/runtime-corejs3": "7.26.10"
+    "@babel/runtime-corejs3": "7.26.10",
+    "tar-fs": "3.0.8"
   },
   "lavamoat": {
     "allowScripts": {
