--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -18,6 +18,7 @@
     "GHSA-96g7-g7g9-jxw8",
     "GHSA-c76h-2ccp-4975",
     "GHSA-vg6x-rcgg-rjx6",
-    "GHSA-67mh-4wv8-2f99"
+    "GHSA-67mh-4wv8-2f99",
+    "GHSA-3gc7-fjrx-p6mg"
   ]
 }
