--- a/package.json
+++ b/package.json
@@ -295,8 +295,7 @@
     "@babel/helpers": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@babel/runtime-corejs3": "7.26.10",
-    "tar-fs": "3.0.8",
-    "bigint-buffer": "1.1.5"
+    "tar-fs": "3.0.8"
   },
   "lavamoat": {
     "allowScripts": {
