--- a/package.json
+++ b/package.json
@@ -295,7 +295,8 @@
     "@babel/helpers": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@babel/runtime-corejs3": "7.26.10",
-    "tar-fs": "3.0.8"
+    "tar-fs": "3.0.8",
+    "react-router": "7.5.2"
   },
   "lavamoat": {
     "allowScripts": {
