--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -19,6 +19,8 @@
     "GHSA-c76h-2ccp-4975",
     "GHSA-vg6x-rcgg-rjx6",
     "GHSA-67mh-4wv8-2f99",
-    "GHSA-3gc7-fjrx-p6mg"
+    "GHSA-3gc7-fjrx-p6mg",
+    "GHSA-cpj6-fhp6-mr6j",
+    "GHSA-f46r-rw29-r322"
   ]
 }
