--- a/package.json
+++ b/package.json
@@ -268,7 +268,7 @@
     "socket.io-parser": "4.2.3",
     "tough-cookie": "4.1.3",
     "graphql": "16.8.1",
-    "vite": "5.4.18",
+    "vite": "5.4.19",
     "chai": "4.3.10",
     "supports-color": "5.5.0",
     "postcss": "8.4.31",
@@ -295,7 +295,8 @@
     "@babel/helpers": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@babel/runtime-corejs3": "7.26.10",
-    "tar-fs": "3.0.8"
+    "tar-fs": "3.0.8",
+    "base-x": "5.0.1"
   },
   "lavamoat": {
     "allowScripts": {
