--- a/.github/workflows/publish-prod-edge.yml
+++ b/.github/workflows/publish-prod-edge.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.REPO_TOKEN }}
+          token: ${{ secrets.ORG_ACCESS_TOKEN }}
       - uses: actions/setup-node@v4
         with:
           node-version: "20.16.0"
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: 'rainbow-me/browser-extension-env'
-          token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+          token: ${{ secrets.ORG_ACCESS_TOKEN }}
           path: tmp
       - name: Copy dotenv
         run: cat tmp/dotenv >> .env && rm -rf tmp
