chore: ignore audit

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -21,6 +21,7 @@
     "GHSA-67mh-4wv8-2f99",
     "GHSA-3gc7-fjrx-p6mg",
     "GHSA-cpj6-fhp6-mr6j",
-    "GHSA-f46r-rw29-r322"
+    "GHSA-f46r-rw29-r322",
+    "GHSA-8cj5-5rvv-wf4v"
   ]
 }
