--- a/.github/actions/testsSetup/action.yml
+++ b/.github/actions/testsSetup/action.yml
@@ -11,6 +11,11 @@ runs:
   - uses: actions/setup-node@v4
     with:
        node-version: "22.17.0"
+  - name: Enable Corepack
+    shell: 'bash'
+    run: |
+      corepack enable
+      corepack prepare --activate
   - name: Download deps cache artifacts
     uses: actions/download-artifact@v4
     with:
