--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: "22.17.0"
           cache: 'yarn'
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare --activate
       - name: Install deps via Yarn
         run: yarn setup
       - name: Check for frozen lockfile
@@ -42,6 +46,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22.17.0"
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare --activate
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
@@ -400,6 +408,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22.17.0"
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare --activate
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
@@ -439,6 +451,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22.17.0"
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare --activate
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
