--- a/.github/workflows/publish-prod-edge.yml
+++ b/.github/workflows/publish-prod-edge.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           node-version: "22.17.0"
           cache: 'yarn'
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare --activate
       - name: Install deps via Yarn
         run: yarn setup
       - uses: actions/checkout@v4
