--- a/.github/workflows/publish-prod-edge.yml
+++ b/.github/workflows/publish-prod-edge.yml
@@ -22,7 +22,9 @@ jobs:
           corepack enable
           corepack prepare --activate
       - name: Install deps via Yarn
-        run: yarn setup
+        run: |
+          yarn install --immutable
+          yarn setup
       - uses: actions/checkout@v4
         with:
           repository: 'rainbow-me/browser-extension-env'
