--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,13 +30,13 @@ jobs:
           yarn setup
       - name: Check for frozen lockfile
         run: yarn check-lockfile
-      - name: Zip node_modules
-        run: tar czf node_modules.tar.gz node_modules/
+      - name: Zip node_modules and yarn state
+        run: tar czf yarn_node_modules.tar.gz node_modules/ .yarn/install-state.gz
       - name: Upload deps artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: node_modules.tar.gz
-          path: node_modules.tar.gz
+          name: yarn_node_modules.tar.gz
+          path: yarn_node_modules.tar.gz
 
   # BUILD THE EXTENSION
   build:
@@ -54,9 +54,9 @@ jobs:
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
-          name: node_modules.tar.gz
-      - name: Unzip node_modules
-        run: tar xzf node_modules.tar.gz
+          name: yarn_node_modules.tar.gz
+      - name: Unzip node_modules and yarn state
+        run: tar xzf yarn_node_modules.tar.gz
       - uses: actions/checkout@v4
         with:
             repository: 'rainbow-me/browser-extension-env'
@@ -416,9 +416,9 @@ jobs:
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
-          name: node_modules.tar.gz
-      - name: Unzip node_modules
-        run: tar xzf node_modules.tar.gz
+          name: yarn_node_modules.tar.gz
+      - name: Unzip node_modules and yarn state
+        run: tar xzf yarn_node_modules.tar.gz
       - name: Install rust
         uses: moonrepo/setup-rust@v1.2.1
         with:
@@ -459,9 +459,9 @@ jobs:
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
-          name: node_modules.tar.gz
-      - name: Unzip node_modules
-        run: tar xzf node_modules.tar.gz
+          name: yarn_node_modules.tar.gz
+      - name: Unzip node_modules and yarn state
+        run: tar xzf yarn_node_modules.tar.gz
       - name: DS Setup
         run: yarn ds:install
       - name: Fetch networks
@@ -478,7 +478,7 @@ jobs:
     steps:
       - uses: geekyeggo/delete-artifact@v5
         with:
-          name: node_modules.tar.gz
+          name: yarn_node_modules.tar.gz
           failOnError: false
       - uses: geekyeggo/delete-artifact@v5
         with:
