--- a/.github/actions/testsSetup/action.yml
+++ b/.github/actions/testsSetup/action.yml
@@ -10,14 +10,19 @@ runs:
   steps:
   - uses: actions/setup-node@v4
     with:
-       node-version: "20.16.0"
+       node-version: "22.17.0"
+  - name: Enable Corepack
+    shell: 'bash'
+    run: |
+      corepack enable
+      corepack prepare --activate
   - name: Download deps cache artifacts
     uses: actions/download-artifact@v4
     with:
-      name: node_modules.tar.gz
-  - name: Unzip node_modules
+      name: yarn_node_modules.tar.gz
+  - name: Unzip node_modules and yarn state
     shell: 'bash'
-    run: tar xzf node_modules.tar.gz
+    run: tar xzf yarn_node_modules.tar.gz
   - name: Download build artifacts
     uses: actions/download-artifact@v4
     with:
