--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "// Design System scripts": "",
     "// GraphQL scripts": "",
     "graphql-setup": "yarn graphql-codegen:install && yarn graphql-codegen",
-    "graphql-codegen:install": "yarn install --cwd src/core/graphql",
+    "graphql-codegen:install": "yarn --cwd src/core/graphql install",
     "graphql-codegen": "export GRAPH_ENS_API_KEY=$(grep GRAPH_ENS_API_KEY .env | cut -d '=' -f2) && cd src/core/graphql && yarn codegen",
-    "ds:install": "yarn install --cwd src/design-system/docs",
+    "ds:install": "yarn --cwd src/design-system/docs install",
     "ds": "cd src/design-system/docs && yarn dev",
     "ds:build": "cd src/design-system/docs && yarn build",
     "ds:generate-symbols": "node -r esbuild-register ./src/design-system/scripts/generateSymbols.ts",
@@ -82,7 +82,7 @@
     "tag-version": "git tag -a v$(node -p \"require('./package.json').version\") -m \"Release v$(node -p \"require('./package.json').version\")\" && git push --tags"
   },
   "engines": {
-    "node": ">=20.16.0"
+    "node": ">=22.17.0"
   },
   "dependencies": {
     "@capsizecss/core": "3.0.0",
@@ -360,8 +360,10 @@
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-has": false,
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>tiny-secp256k1": false,
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false,
-      "esbuild-register>esbuild": false
+      "esbuild-register>esbuild": false,
+      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>bufferutil": false,
+      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>utf-8-validate": false
     }
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@4.2.2"
 }
