--- a/.github/actions/testsSetup/action.yml
+++ b/.github/actions/testsSetup/action.yml
@@ -13,9 +13,7 @@ runs:
        node-version: "22.17.0"
   - name: Enable Corepack
     shell: 'bash'
-    run: |
-      corepack enable
-      corepack prepare --activate
+    run: corepack enable
   - name: Download deps cache artifacts
     uses: actions/download-artifact@v4
     with:
