--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,7 @@ jobs:
         with:
           node-version: "22.17.0"
       - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare --activate
+        run: corepack enable
       - name: Install deps via Yarn
         run: |
           yarn install --immutable
@@ -48,9 +46,7 @@ jobs:
         with:
           node-version: "22.17.0"
       - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare --activate
+        run: corepack enable
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
@@ -410,9 +406,7 @@ jobs:
         with:
           node-version: "22.17.0"
       - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare --activate
+        run: corepack enable
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
@@ -453,9 +447,7 @@ jobs:
         with:
           node-version: "22.17.0"
       - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare --activate
+        run: corepack enable
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v4
         with:
