--- a/.github/workflows/publish-prod-edge.yml
+++ b/.github/workflows/publish-prod-edge.yml
@@ -18,9 +18,7 @@ jobs:
         with:
           node-version: "22.17.0"
       - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare --activate
+        run: corepack enable
       - name: Install deps via Yarn
         run: |
           yarn install --immutable
