e2e: limit retries, add ci config for additional retry

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,7 @@ jobs:
   #           export BROWSER=firefox
   #           export OS=linux
   #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #           export MAX_RETRIES=1
   #           yarn firefox:manifest && yarn firefox:zip
   #           yarn vitest:parallel
   #     - name: Upload deps artifacts
@@ -126,6 +127,7 @@ jobs:
   #         export BROWSER=firefox
   #         export OS=linux
   #         export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #         export MAX_RETRIES=1
   #         yarn firefox:manifest && yarn firefox:zip
   #         yarn vitest:swap
   #     - name: Upload deps artifacts
@@ -156,6 +158,7 @@ jobs:
   #           export BROWSER=firefox
   #           export OS=linux
   #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #           export MAX_RETRIES=1
   #           yarn firefox:manifest && yarn firefox:zip
   #           yarn vitest:send
   #     - name: Upload deps artifacts
@@ -186,6 +189,7 @@ jobs:
   #         export BROWSER=firefox
   #         export OS=linux
   #         export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #         export MAX_RETRIES=1
   #         yarn firefox:manifest && yarn firefox:zip
   #         yarn vitest:dappInteractions
   #     - name: Upload deps artifacts
@@ -217,6 +221,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          export MAX_RETRIES=1
           yarn vitest:parallel
       - name: Upload deps artifacts
         if: steps.ChromeE2EParallel.outcome == 'failure'
@@ -246,6 +251,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          export MAX_RETRIES=1
           yarn vitest:swap
       - name: Upload deps artifacts
         if: steps.ChromeE2ESwaps.outcome == 'failure'
@@ -275,6 +281,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          export MAX_RETRIES=1
           yarn vitest:send
       - name: Upload deps artifacts
         if: steps.ChromeE2ESend.outcome == 'failure'
@@ -304,6 +311,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          export MAX_RETRIES=1
           yarn vitest:send:optimism
       - name: Upload deps artifacts
         if: steps.ChromeOpE2ESend.outcome == 'failure'
@@ -333,6 +341,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          export MAX_RETRIES=1
           yarn vitest:dappInteractions
       - name: Upload deps artifacts
         if: steps.ChromeE2EDappInteractions.outcome == 'failure'
