--- a/package.json
+++ b/package.json
@@ -175,6 +175,8 @@
     "@lavamoat/allow-scripts": "3.0.1",
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@peculiar/webcrypto": "1.4.1",
+    "@sentry/cli": "2.47.1",
+    "@sentry/webpack-plugin": "3.6.0",
     "@testing-library/react": "13.4.0",
     "@total-typescript/ts-reset": "0.4.2",
     "@types/chroma-js": "2.1.4",
