--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@rainbow-me/swaps": "0.36.0",
     "@rudderstack/analytics-js-service-worker": "3.0.6",
     "@scure/bip39": "1.2.1",
-    "@sentry/browser": "8.33.0",
+    "@sentry/react": "9.40.0",
     "@tanstack/query-async-storage-persister": "5.35.1",
     "@tanstack/react-query": "5.35.1",
     "@tanstack/react-query-persist-client": "5.35.1",
