--- a/package.json
+++ b/package.json
@@ -241,62 +241,6 @@
     "webpack-extension-reloader": "rainbow-me/webpack-extension-reloader#23fc3ed1f59f295702d459ad58aec90d6f0a3551",
     "worker-loader": "3.0.8"
   },
-  "resolutions": {
-    "tar": "6.2.1",
-    "bn.js": "5.2.1",
-    "@scure/bip39": "1.2.1",
-    "protobufjs": "7.2.5",
-    "@grpc/grpc-js": "1.10.9",
-    "semver": "7.5.2",
-    "globby": "11.1.0",
-    "json5": "2.2.2",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "minimatch": "3.0.5",
-    "minimist": "1.2.6",
-    "set-value": "2.0.1",
-    "grunt": "1.5.3",
-    "lodash": "4.17.21",
-    "underscore": "1.12.1",
-    "underscore.string": "3.3.5",
-    "clean-css": "4.1.11",
-    "@xmldom/xmldom": "0.8.4",
-    "loader-utils": "2.0.4",
-    "nth-check": "2.0.1",
-    "decode-uri-component": "0.2.1",
-    "http-cache-semantics": "4.1.1",
-    "socket.io-parser": "4.2.3",
-    "tough-cookie": "4.1.3",
-    "graphql": "16.8.1",
-    "vite": "5.4.19",
-    "chai": "4.3.10",
-    "supports-color": "5.5.0",
-    "postcss": "8.4.31",
-    "crypto-js": "4.2.0",
-    "yaml": "2.2.2",
-    "browserify-sign": "4.2.2",
-    "axios": "1.8.2",
-    "follow-redirects": "1.15.6",
-    "ip": "2.0.1",
-    "@solana/web3.js": "1.90.2",
-    "jose": "4.15.5",
-    "phin": "3.7.1",
-    "braces": "3.0.3",
-    "ws": "8.17.1",
-    "micromatch": "4.0.8",
-    "webpack": "5.94.0",
-    "path-to-regexp": "6.3.0",
-    "dset": "3.1.4",
-    "zod": "3.23.8",
-    "rollup": "4.22.4",
-    "cross-spawn": "6.0.6",
-    "nanoid": "3.3.8",
-    "elliptic": "6.6.1",
-    "@babel/helpers": "7.26.10",
-    "@babel/runtime": "7.26.10",
-    "@babel/runtime-corejs3": "7.26.10",
-    "tar-fs": "3.0.8",
-    "base-x": "5.0.1"
-  },
   "lavamoat": {
     "allowScripts": {
       "@lavamoat/preinstall-always-fail": false,
@@ -361,7 +305,8 @@
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false,
       "esbuild-register>esbuild": false,
       "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>bufferutil": false,
-      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>utf-8-validate": false
+      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>utf-8-validate": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/protobuf>protobufjs": false
     }
   },
   "packageManager": "yarn@4.2.2"
