--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "deepmerge": "4.2.2",
     "ethereum-cryptography": "2.1.2",
     "eventemitter3": "4.0.7",
-    "firebase": "10.12.3",
+    "firebase": "12.0.0",
     "framer-motion": "10.2.3",
     "graphql-request": "5.2.0",
     "graphql-tag": "^2.11.0",
@@ -361,7 +361,8 @@
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false,
       "esbuild-register>esbuild": false,
       "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>bufferutil": false,
-      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>utf-8-validate": false
+      "wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer>utf-8-validate": false,
+      "firebase>@firebase/util": false
     }
   },
   "packageManager": "yarn@4.2.2"
