revert: remove firebase env

--- a/.env.example
+++ b/.env.example
@@ -36,11 +36,13 @@ RPC_PROXY_API_KEY=
 RPC_PROXY_BASE_URL=
 RPC_PROXY_ENABLED=false
 
-# Firebase Remote Config
+# Firebase
 FIREBASE_API_KEY_BX=
 FIREBASE_AUTH_DOMAIN_BX=
 FIREBASE_PROJECT_ID_BX=
+FIREBASE_SENDER_ID_BX=
 FIREBASE_APP_ID_BX=
+FIREBASE_VAPID_BX=
 
 # Telemetry
 RUDDERSTACK_WRITE_KEY=
