--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
     "@ledgerhq/hw-transport-webhid": "6.30.0",
     "@metamask/browser-passworder": "4.1.0",
     "@metamask/eth-sig-util": "7.0.1",
+    "@orpc/client": "1.7.9",
+    "@orpc/contract": "1.7.9",
+    "@orpc/server": "1.7.9",
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-context-menu": "2.1.1",
     "@radix-ui/react-dropdown-menu": "2.0.1",
@@ -157,8 +160,12 @@
     "react-image": "4.1.0",
     "react-router-dom": "6.4.2",
     "react-switch": "7.0.0",
+    "socket.io-client": "4.5.3",
+    "validator": "13.9.0",
     "viem": "2.31.7",
     "wagmi": "2.16.1",
+    "word-wrap": "1.2.4",
+    "zod": "4.0.14",
     "zustand": "4.5.4"
   },
   "devDependencies": {
@@ -187,6 +194,7 @@
     "@vanilla-extract/vite-plugin": "3.6.1",
     "@vanilla-extract/webpack-plugin": "2.2.0",
     "audit-ci": "6.3.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "browserify": "17.0.0",
     "buffer": "6.0.3",
     "chromedriver": "138.0.5",
@@ -277,7 +285,6 @@
     "webpack": "5.94.0",
     "path-to-regexp": "6.3.0",
     "dset": "3.1.4",
-    "zod": "3.23.8",
     "rollup": "4.22.4",
     "cross-spawn": "6.0.6",
     "nanoid": "3.3.8",
