--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "playground:ds": "PLAYGROUND=ds webpack --config ./webpack.config.dev.js --watch",
     "lint": "eslint --cache --max-warnings 0",
     "typecheck": "tsc --noEmit",
+    "knip": "knip",
     "// Fetch backend networks": "",
     "fetch:networks": "node scripts/networks.js",
     "// Design System scripts": "",
@@ -220,6 +221,7 @@
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jest": "29.2.0",
+    "knip": "5.0.0",
     "lavamoat": "8.0.3",
     "lavamoat-browserify": "17.0.4",
     "lint-staged": "13.0.3",
