--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "// Generates LavaMoat secured modules from the Webpack build": "",
     "build:lavamoat": "lavamoat ./scripts/lavamoat-browserify.js --policy ./lavamoat/build-lavamoat/policy.json --override ./lavamoat/build-lavamoat/policy-override.json",
     "dev": "yarn devmode:on && webpack --config ./webpack.config.dev.js --watch",
-    "playground": "PLAYGROUND=default webpack --config ./webpack.config.dev.js --watch",
-    "playground:ds": "PLAYGROUND=ds webpack --config ./webpack.config.dev.js --watch",
     "lint": "eslint --cache --max-warnings 0",
     "typecheck": "tsc --noEmit",
+    "knip": "knip",
     "// Fetch backend networks": "",
     "fetch:networks": "node scripts/networks.js",
     "// Design System scripts": "",
@@ -129,12 +128,9 @@
     "@vanilla-extract/dynamic": "2.0.2",
     "@vanilla-extract/sprinkles": "1.5.0",
     "bignumber.js": "9.0.1",
-    "buffer": "6.0.3",
     "check-password-strength": "2.0.7",
     "chroma-js": "2.4.2",
     "clsx": "1.2.1",
-    "cmdk": "0.2.0",
-    "currency.js": "2.0.4",
     "date-fns": "2.29.3",
     "deepmerge": "4.2.2",
     "ethereum-cryptography": "2.1.2",
@@ -148,7 +144,6 @@
     "imgix-core-js": "2.3.2",
     "lodash": "4.17.21",
     "make-color-more-chill": "0.2.2",
-    "match-sorter": "6.3.1",
     "mipd": "0.0.5",
     "mnemonist": "0.39.5",
     "node-vibrant": "3.2.1-alpha.1",
@@ -162,11 +157,8 @@
     "react-image": "4.1.0",
     "react-router-dom": "6.4.2",
     "react-switch": "7.0.0",
-    "socket.io-client": "4.5.3",
-    "validator": "13.9.0",
     "viem": "2.31.7",
     "wagmi": "2.16.1",
-    "word-wrap": "1.2.4",
     "zustand": "4.5.4"
   },
   "devDependencies": {
@@ -190,15 +182,13 @@
     "@types/react-dom": "18.0.6",
     "@types/selenium-webdriver": "4.1.28",
     "@types/semver": "7.3.13",
-    "@types/validator": "13.7.12",
     "@typescript-eslint/eslint-plugin": "6.4.1",
     "@typescript-eslint/parser": "6.4.1",
     "@vanilla-extract/vite-plugin": "3.6.1",
     "@vanilla-extract/webpack-plugin": "2.2.0",
-    "ansi-styles": "6.2.1",
     "audit-ci": "6.3.0",
     "browserify": "17.0.0",
-    "chalk": "5.3.0",
+    "buffer": "6.0.3",
     "chromedriver": "138.0.5",
     "circular-dependency-plugin": "5.2.2",
     "copy-webpack-plugin": "11.0.0",
@@ -220,6 +210,7 @@
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jest": "29.2.0",
+    "knip": "5.0.0",
     "lavamoat": "8.0.3",
     "lavamoat-browserify": "17.0.4",
     "lint-staged": "13.0.3",
@@ -230,7 +221,6 @@
     "prettier": "3.0.2",
     "selenium-webdriver": "4.34.0",
     "semver": "7.5.2",
-    "supports-color": "5.5.0",
     "svg-path-commander": "1.0.5",
     "ts-loader": "9.4.1",
     "typescript": "5.2.2",
