--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "zip:source": "zip -r ./rainbowbx-source.zip * -x 'build/*' -x '*node_modules/*'",
     "// Build and zip": "",
     "bundle": "yarn build && yarn zip",
+    "// Check bundle sizes": "",
+    "bundlewatch": "bundlewatch --config .bundlewatchrc.json",
     "// Runs tests": "",
     "anvil": "anvil --fork-url $(./scripts/get-rpc-url.sh mainnet) --fork-block-number 21939175 --block-base-fee-per-gas 100000000 --block-gas-limit 30000000",
     "anvil:optimism": "anvil --fork-url $(./scripts/get-rpc-url.sh optimism)",
@@ -189,6 +191,7 @@
     "audit-ci": "6.3.0",
     "browserify": "17.0.0",
     "buffer": "6.0.3",
+    "bundlewatch": "0.4.1",
     "chromedriver": "138.0.5",
     "circular-dependency-plugin": "5.2.2",
     "copy-webpack-plugin": "11.0.0",
