fix: reduce github action permissions for bundlewatch cli

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -422,6 +422,9 @@ jobs:
   bundlewatch:
     runs-on: ubuntu-latest
     needs: [build]
+    permissions:
+      contents: read
+      statuses: write  # Needed to post status checks if using GitHub token
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
