--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "prettier": "3.0.2",
     "selenium-webdriver": "4.34.0",
     "semver": "7.5.2",
+    "sharp": "0.34.3",
     "svg-path-commander": "1.0.5",
     "ts-loader": "9.4.1",
     "typescript": "5.2.2",
