--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "// Generates LavaMoat secured modules from the Webpack build": "",
     "build:lavamoat": "lavamoat ./scripts/lavamoat-browserify.js --policy ./lavamoat/build-lavamoat/policy.json --override ./lavamoat/build-lavamoat/policy-override.json",
     "dev": "yarn devmode:on && webpack --config ./webpack.config.dev.js --watch",
-    "lint": "eslint --cache --max-warnings 0",
+    "lint": "eslint --cache --max-warnings 0 .",
     "typecheck": "tsc --noEmit",
     "knip": "knip",
     "// Fetch backend networks": "",
@@ -189,6 +189,7 @@
     "@vanilla-extract/vite-plugin": "3.6.1",
     "@vanilla-extract/webpack-plugin": "2.2.0",
     "audit-ci": "6.3.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "browserify": "17.0.0",
     "buffer": "6.0.3",
     "bundlewatch": "0.4.1",
@@ -244,7 +245,6 @@
     "semver": "7.5.2",
     "globby": "11.1.0",
     "json5": "2.2.2",
-    "eslint-import-resolver-typescript": "2.7.1",
     "minimatch": "3.0.5",
     "minimist": "1.2.6",
     "set-value": "2.0.1",
