--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-rainbow": "4.4.0",
+    "eslint-plugin-boundaries": "5.0.1",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-jest": "27.2.3",
     "eslint-plugin-prettier": "5.0.0",
