Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,4 +2,4 @@ files:
   - source: /static/json/languages/en_US.json
     translation: /static/json/languages/%locale_with_underscore%.json
   - source: /static/_locales/en_US/messages.json
-    translation: /static/_locales/%locale_with_underscore%/messages.json
+    translation: /static/_locales/%locale%/messages.json
